kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reddit-forum-service
spec:
  selector:
    app: reddit-forum
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
